--- a/IPList/PrefsWindow.xib
+++ b/IPList/PrefsWindow.xib
@@ -8,7 +8,11 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PrefsWindowController">
             <connections>
+                <outlet property="btnSave" destination="JIj-KM-DQS" id="OTL-I7-0D3"/>
                 <outlet property="btnSave_Click" destination="JIj-KM-DQS" id="F5K-qK-Z2z"/>
+                <outlet property="cmbPortList" destination="nZC-Yv-VsE" id="TPi-KX-kyc"/>
+                <outlet property="lblStatus" destination="OfR-G5-EEM" id="86p-SJ-a1x"/>
+                <outlet property="prgStatus" destination="gKE-I6-5lW" id="eNB-L6-Thl"/>
                 <outlet property="txtPingTimeout" destination="vlP-Gd-06L" id="Hc6-0L-80f"/>
                 <outlet property="txtPorts" destination="XEI-l0-RaO" id="nl2-Cy-izf"/>
                 <outlet property="txtPortscanTimeout" destination="duY-vS-Zgi" id="sfm-Xz-RFE"/>
@@ -16,13 +20,13 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
-        <window title="Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" animationBehavior="default" id="2" customClass="PrefsWindow">
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
+        <window title="Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" animationBehavior="default" tabbingMode="disallowed" id="2" customClass="PrefsWindow">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES"/>
-            <rect key="contentRect" x="131" y="74" width="459" height="492"/>
+            <rect key="contentRect" x="131" y="74" width="418" height="492"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1200"/>
             <view key="contentView" id="3">
-                <rect key="frame" x="0.0" y="0.0" width="459" height="492"/>
+                <rect key="frame" x="0.0" y="0.0" width="418" height="492"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ajw-ea-FBb">
@@ -35,7 +39,7 @@
                         </textFieldCell>
                     </textField>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JIj-KM-DQS">
-                        <rect key="frame" x="375" y="13" width="70" height="32"/>
+                        <rect key="frame" x="334" y="13" width="70" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="nz6-WK-vcT">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -45,19 +49,19 @@
                             <action selector="btnSave_Click:" target="-2" id="2rg-WS-2Xj"/>
                         </connections>
                     </button>
-                    <scrollView focusRingType="none" fixedFrame="YES" borderType="line" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="twQ-bi-7kk">
-                        <rect key="frame" x="20" y="52" width="419" height="336"/>
+                    <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="twQ-bi-7kk">
+                        <rect key="frame" x="20" y="52" width="378" height="333"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="Xza-O7-93B">
-                            <rect key="frame" x="1" y="1" width="417" height="334"/>
+                            <rect key="frame" x="1" y="1" width="376" height="331"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView ambiguous="YES" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="XEI-l0-RaO">
-                                    <rect key="frame" x="0.0" y="0.0" width="417" height="334"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="376" height="331"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                    <size key="minSize" width="417" height="334"/>
+                                    <size key="minSize" width="376" height="331"/>
                                     <size key="maxSize" width="671" height="10000000"/>
                                     <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                 </textView>
@@ -68,7 +72,7 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="vPW-Vb-w1H">
-                            <rect key="frame" x="378" y="1" width="16" height="305"/>
+                            <rect key="frame" x="361" y="1" width="16" height="331"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -82,7 +86,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vlP-Gd-06L">
-                        <rect key="frame" x="140" y="453" width="216" height="21"/>
+                        <rect key="frame" x="140" y="453" width="175" height="21"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="x60-op-mdh">
                             <font key="font" metaFont="system"/>
@@ -100,7 +104,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="duY-vS-Zgi">
-                        <rect key="frame" x="140" y="422" width="216" height="21"/>
+                        <rect key="frame" x="140" y="422" width="175" height="21"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="PAA-Kf-yKD">
                             <font key="font" metaFont="system"/>
@@ -109,7 +113,7 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sAL-tA-R5s">
-                        <rect key="frame" x="362" y="456" width="79" height="16"/>
+                        <rect key="frame" x="321" y="456" width="79" height="16"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Milliseconds" id="YIf-qj-iWz">
                             <font key="font" metaFont="system"/>
@@ -118,7 +122,7 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bB5-VE-ueC">
-                        <rect key="frame" x="362" y="425" width="79" height="16"/>
+                        <rect key="frame" x="321" y="425" width="79" height="16"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Milliseconds" id="40d-Tb-pzY">
                             <font key="font" metaFont="system"/>
@@ -126,9 +130,45 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
+                    <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nZC-Yv-VsE">
+                        <rect key="frame" x="138" y="390" width="180" height="25"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <popUpButtonCell key="cell" type="push" title="Top 1,000" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="CEL-pc-Exz" id="2Uh-FC-jhp">
+                            <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                            <menu key="menu" id="E7U-B6-OdR">
+                                <items>
+                                    <menuItem title="Top 1,000" state="on" id="CEL-pc-Exz"/>
+                                    <menuItem title="Top 100" id="CDX-pe-eDq"/>
+                                    <menuItem isSeparatorItem="YES" id="ewf-rH-aj1"/>
+                                    <menuItem title="All 65,535" id="XQa-nT-vS4"/>
+                                    <menuItem isSeparatorItem="YES" id="djG-b9-E9N"/>
+                                    <menuItem title="Custom" id="NZK-Gw-n2q">
+                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                    </menuItem>
+                                </items>
+                            </menu>
+                        </popUpButtonCell>
+                        <connections>
+                            <action selector="cmbPortList_Click:" target="-2" id="e4w-Wp-rFa"/>
+                        </connections>
+                    </popUpButton>
+                    <progressIndicator wantsLayer="YES" fixedFrame="YES" maxValue="100" displayedWhenStopped="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="gKE-I6-5lW">
+                        <rect key="frame" x="323" y="396" width="16" height="16"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    </progressIndicator>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OfR-G5-EEM">
+                        <rect key="frame" x="20" y="23" width="314" height="16"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                        <textFieldCell key="cell" lineBreakMode="clipping" title="Loaded 0 ports" id="oz0-6L-kvv">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
                 </subviews>
             </view>
-            <point key="canvasLocation" x="79.5" y="149"/>
+            <point key="canvasLocation" x="59" y="149"/>
         </window>
     </objects>
 </document>
